2009-10-06  ARAKI Yasuhiro  <ar@debian.org>

	* test/functional/author_controller_test.rb (AuthorControllerTest#test_manage_article): Change to apply for modifing articles.yml.

	* test/fixtures/{enrollments,categories,articles,dona_cas}.yml: Add to nested categories test.

	* app/controllers/notes_controller.rb (NotesController#show_category_core): Fix to hide duplicate articles.

2009-07-31  ARAKI Yasuhiro  <ar@debian.org>

	* (pre) release to apply JRuby1.3.1.
	Please install
	- mislav-will_paginate (in gems.github.com).
	- (For JRuby) libxml-jruby
	
	* config/environment.rb (Rails::Configuration): Change to use mislav-will_paginate. "sudo gem sources -a http://gems.github.com && sudo gem install mislav-will_paginate".

	* test/integration/browse_story_test.rb 
	(BrowseStoryTest#test_show_search_noteslist__q)	
	(BrowseStoryTest#test_show_archives_199901a)	
	(BrowseStoryTest#test_notes_show_category_noteslist)	
	(BrowseStoryTest#test_notes_show_category_noteslist__2): To be fix for Jruby.

2009-07-30  ARAKI Yasuhiro  <ar@debian.org>

	* lib/modules/*.rb: Change to use gem

	* config/environment.example.rb (Rails::Configuration): add "packet" for config.gem.

	* config/database.example.yml (development): apply for JRUBY.

2009-07-28  ARAKI Yasuhiro  <ar@debian.org>

	* Update to apply rails 2.3.4. Some test methods are changed.
	
2009-06-06  ARAKI Yasuhiro  <ar@debian.org>

	* config/environment.example.rb (Rails::Configuration): Fix to use config.gem.

2009-05-03  ARAKI Yasuhiro  <ar@debian.org>

	* Update to apply rails 2.3.2.
	- Require to install actionwebservice 2.3.2
	- update config/environment.rb
	- "rake rails:update && rake db:migrate" for updating db.

2009-04-06  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb (NotesController#show_category_core): Fix to show paginate for articles of category.

2009-04-05  ARAKI Yasuhiro  <ar@debian.org>
